test/invalid/baseline/callback-semicolon.txt
Syntax error at line 1, since `callback TotheFuture`:
 TotheFuture = void ()
                      ^ Unterminated callback, expected `;`
